--- a/api-index.html
+++ b/api-index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Index - JMX Interface 0.2 API documentation</title>
+    <title>Index - JMX Interface 0.3.0 API documentation</title>
     <link href="static/favicon.png" rel="icon" />
     <link href="static/favicon.png" rel="shortcut icon" />
     <link media="all" type="text/css" href="static/clojure.css" rel="stylesheet" />
@@ -27,7 +27,7 @@ namespace.
       <div id="leftcolumn"><div style="text-align: center;"></div>
 <div class="menu">
   <div class="WikiCustomNav WikiElement wiki">
-    <span class="toc-header"><span id="project-name">JMX Interface</span> <span id="version">0.2</span> API</span><br />
+    <span class="toc-header"><span id="project-name">JMX Interface</span> <span id="version">0.3.0</span> API</span><br />
     <ul>
       <li><a class="wiki_link" href="index.html">Overview</a></li>
       <li><a class="wiki_link" href="api-index.html">API Index</a></li>
@@ -43,7 +43,7 @@ namespace.
 	  <div class="contentBox"><div class="innerContentBox">
               <div id="content_view" class="wiki wikiPage">
                 <div id="right-sidebar"></div>
-                <div id="content-tag"><h1 id="overview">Index of Public Functions and Variables - <span id="header-project">JMX Interface</span> <span id="header-version">0.2</span> (<span id="header-status">in development</span>)</h1>
+                <div id="content-tag"><h1 id="overview">Index of Public Functions and Variables - <span id="header-project">JMX Interface</span> <span id="header-version">0.3.0</span><span id="header-status-block"> (<span id="header-status">in development</span>)</span></h1>
 This page has an alphabetical index of all the documented functions and variables
 in <span class="project-name-span">JMX Interface</span>. 
 
@@ -74,126 +74,156 @@ Shortcuts:<br />
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/attribute-info">attribute-info</a><span id="line-content">               function      clojure.java.jmx   Get the MBeanAttributeInfo for an attribute..
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/attribute-names">attribute-names</a><span id="line-content">              function      clojure.java.jmx   All attribute names available on an MBean..
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="B"><span id="section-head">B</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="index.html#clojure.java.jmx/Bean">Bean</a><span id="line-content">                         type          clojure.java.jmx   
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="C"><span id="section-head">C</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/*connection*">*connection*</a><span id="line-content">                 var           clojure.java.jmx   The connection to be used for JMX ops. Defaults to...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/create-bean">create-bean</a><span id="line-content">                  function      clojure.java.jmx   Expose a reference as a JMX bean. state-ref should...
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="D"><span id="section-head">D</span></h2>
   <pre>
-</pre>
+<span id="section-content"> <a href="index.html#clojure.java.jmx/Destract">Destract</a><span id="line-content">                     protocol      clojure.java.jmx   
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="E"><span id="section-head">E</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="F"><span id="section-head">F</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="G"><span id="section-head">G</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="H"><span id="section-head">H</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="I"><span id="section-head">I</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/invoke">invoke</a><span id="line-content">                       function      clojure.java.jmx   Invoke an operation an an MBean..
-</span></span></pre>
+</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/invoke-signature">invoke-signature</a><span id="line-content">             function      clojure.java.jmx   Invoke an operation an an MBean. You must also sup...
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="J"><span id="section-head">J</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/jmx-url">jmx-url</a><span id="line-content">                      function      clojure.java.jmx   Build a JMX URL from options..
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="K"><span id="section-head">K</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="L"><span id="section-head">L</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="M"><span id="section-head">M</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/mbean">mbean</a><span id="line-content">                        function      clojure.java.jmx   Like clojure.core/bean, but for JMX beans. Returns...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/mbean-names">mbean-names</a><span id="line-content">                  function      clojure.java.jmx   Finds all MBeans matching a name on the current *c...
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="N"><span id="section-head">N</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="O"><span id="section-head">O</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/objects-&gt;data">objects-&gt;data</a><span id="line-content">                function      clojure.java.jmx   Convert JMX object model into data. Handles Compos...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/operation-names">operation-names</a><span id="line-content">              function      clojure.java.jmx   All operation names available on an MBean..
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/operations">operations</a><span id="line-content">                   function      clojure.java.jmx   All oeprations available on an MBean..
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="P"><span id="section-head">P</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="Q"><span id="section-head">Q</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="R"><span id="section-head">R</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/raw-read">raw-read</a><span id="line-content">                     function      clojure.java.jmx   Read an mbean property. Returns low-level Java obj...
-</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/read">read</a><span id="line-content">                         var           clojure.java.jmx   Read an mbean property..
+<span id="section-content"> <a href="index.html#clojure.java.jmx/raw-read">raw-read</a><span id="line-content">                     function      clojure.java.jmx   Read a list of mbean properties. Returns low-level...
+</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/read">read</a><span id="line-content">                         var           clojure.java.jmx   Read one or more mbean properties..
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/readable?">readable?</a><span id="line-content">                    function      clojure.java.jmx   Is attribute readable?.
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/register-mbean">register-mbean</a><span id="line-content">               function      clojure.java.jmx   Register an mbean with the current *connection*..
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="S"><span id="section-head">S</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="T"><span id="section-head">T</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="U"><span id="section-head">U</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="V"><span id="section-head">V</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="W"><span id="section-head">W</span></h2>
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/with-connection">with-connection</a><span id="line-content">              macro         clojure.java.jmx   Execute body with JMX connection specified by opts...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/write!">write!</a><span id="line-content">                       function      clojure.java.jmx   Write an attribute value..
-</span></span></pre>
+</span></span>
+  </pre>
 </div><div id="index-body">
   <h2 id="X"><span id="section-head">X</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="Y"><span id="section-head">Y</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="Z"><span id="section-head">Z</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div><div id="index-body">
   <h2 id="Other"><span id="section-head">Other</span></h2>
   <pre>
-</pre>
+
+  </pre>
 </div>
 <style type="text/css">
   #AllContentContainer {min-width: 96em;}
@@ -204,7 +234,7 @@ Shortcuts:<br />
           </div>
 	</div>
 	<div id="foot">
-	  <div style="text-align: center;" id="copyright">Copyright 2007-2011 by Rich Hickey and the various contributors</div>
+	  <div style="text-align: center;" id="copyright">Copyright 2007-2012 by Rich Hickey and the various contributors</div>
 	</div>
       </div>
       <div id="DesignedBy">Logo &amp; site design by <a title="Visit Tom Hickey's website." href="http://www.tomhickey.com">Tom Hickey</a>.<br />
