Autodoc commit for master/8b116523

--- a/api-index.html
+++ b/api-index.html
@@ -70,8 +70,7 @@ Shortcuts:<br />
 <div id="index-body">
   <h2 id="A"><span id="section-head">A</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/attribute-info">attribute-info</a><span id="line-content">               function      clojure.java.jmx   Get the MBeanAttributeInfo for an attribute..
-</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/attribute-names">attribute-names</a><span id="line-content">              function      clojure.java.jmx   All attribute names available on an MBean..
+<span id="section-content"> <a href="index.html#clojure.java.jmx/attribute-names">attribute-names</a><span id="line-content">              function      clojure.java.jmx   All attribute names available on an MBean..
 </span></span>
   </pre>
 </div><div id="index-body">
@@ -83,8 +82,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="C"><span id="section-head">C</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/*connection*">*connection*</a><span id="line-content">                 var           clojure.java.jmx   The connection to be used for JMX ops. Defaults to...
-</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/create-bean">create-bean</a><span id="line-content">                  function      clojure.java.jmx   Expose a reference as a JMX bean. state-ref should...
+<span id="section-content"> <a href="index.html#clojure.java.jmx/create-bean">create-bean</a><span id="line-content">                  function      clojure.java.jmx   Expose a reference as a JMX bean. state-ref should...
 </span></span>
   </pre>
 </div><div id="index-body">
@@ -116,15 +114,14 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="I"><span id="section-head">I</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/invoke">invoke</a><span id="line-content">                       function      clojure.java.jmx   Invoke an operation an an MBean..
+<span id="section-content"> <a href="index.html#clojure.java.jmx/invoke">invoke</a><span id="line-content">                       function      clojure.java.jmx   Invoke an operation an an MBean. See also: invoke-...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/invoke-signature">invoke-signature</a><span id="line-content">             function      clojure.java.jmx   Invoke an operation an an MBean. You must also sup...
 </span></span>
   </pre>
 </div><div id="index-body">
   <h2 id="J"><span id="section-head">J</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/jmx-url">jmx-url</a><span id="line-content">                      function      clojure.java.jmx   Build a JMX URL from options..
-</span></span>
+
   </pre>
 </div><div id="index-body">
   <h2 id="K"><span id="section-head">K</span></h2>
@@ -153,7 +150,6 @@ Shortcuts:<br />
   <pre>
 <span id="section-content"> <a href="index.html#clojure.java.jmx/objects-&gt;data">objects-&gt;data</a><span id="line-content">                function      clojure.java.jmx   Convert JMX object model into data. Handles Compos...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/operation-names">operation-names</a><span id="line-content">              function      clojure.java.jmx   All operation names available on an MBean..
-</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/operations">operations</a><span id="line-content">                   function      clojure.java.jmx   All oeprations available on an MBean..
 </span></span>
   </pre>
 </div><div id="index-body">
@@ -169,8 +165,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="R"><span id="section-head">R</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/raw-read">raw-read</a><span id="line-content">                     function      clojure.java.jmx   Read a list of mbean properties. Returns low-level...
-</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/read">read</a><span id="line-content">                         var           clojure.java.jmx   Read one or more mbean properties..
+<span id="section-content"> <a href="index.html#clojure.java.jmx/read">read</a><span id="line-content">                         var           clojure.java.jmx   Read one or more mbean properties..
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/readable?">readable?</a><span id="line-content">                    function      clojure.java.jmx   Is attribute readable?.
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/register-mbean">register-mbean</a><span id="line-content">               function      clojure.java.jmx   Register an mbean with the current *connection*..
 </span></span>
