Autodoc commit for master/69ebdef1

--- a/api-index.html
+++ b/api-index.html
@@ -193,7 +193,7 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="W"><span id="section-head">W</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/with-connection">with-connection</a><span id="line-content">              macro         clojure.java.jmx   Execute body with JMX connection specified by opts...
+<span id="section-content"> <a href="index.html#clojure.java.jmx/with-connection">with-connection</a><span id="line-content">              macro         clojure.java.jmx   Execute body with a JMX connection created based o...
 </span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/write!">write!</a><span id="line-content">                       function      clojure.java.jmx   Write an attribute value..
 </span></span>
   </pre>
