--- a/api-index.html
+++ b/api-index.html
@@ -76,7 +76,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="B"><span id="section-head">B</span></h2>
   <pre>
-<span id="section-content"> <a href="index.html#clojure.java.jmx/Bean">Bean</a><span id="line-content">                         type          clojure.java.jmx   
+<span id="section-content"> <a href="index.html#clojure.java.jmx/-&gt;Bean">-&gt;Bean</a><span id="line-content">                       function      clojure.java.jmx   Positional factory function for class clojure.java...
+</span></span><span id="section-content"> <a href="index.html#clojure.java.jmx/Bean">Bean</a><span id="line-content">                         type          clojure.java.jmx   
 </span></span>
   </pre>
 </div><div id="index-body">
