Autodoc commit for master/7fff2430

--- a/api-index.html
+++ b/api-index.html
@@ -184,7 +184,8 @@ Shortcuts:<br />
 </div><div id="index-body">
   <h2 id="U"><span id="section-head">U</span></h2>
   <pre>
-
+<span id="section-content"> <a href="index.html#clojure.java.jmx/unregister-mbean">unregister-mbean</a><span id="line-content">             function      clojure.java.jmx   Unregister mbean named mbean-name with the current...
+</span></span>
   </pre>
 </div><div id="index-body">
   <h2 id="V"><span id="section-head">V</span></h2>
